<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view_writing"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    tools:context=".WritingActivity">

    <!--put focus on parent layout so EditText doesn't
    automatically have focus and block other Views like image-->
...
